<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg_banner"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/_0_00" />

            <ImageView
                android:id="@+id/climate_img"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/thumbnail"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="@+id/time_text"
                app:layout_constraintStart_toStartOf="@+id/time_text"
                app:layout_constraintTop_toBottomOf="@+id/time_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/climate_img"
                app:layout_constraintStart_toStartOf="@+id/climate_img"
                app:layout_constraintTop_toBottomOf="@+id/climate_img">

                <TextView
                    android:id="@+id/degree_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/_00" />

                <TextView
                    android:id="@+id/degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/c"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/degree_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/degree_text"
                    app:layout_constraintTop_toTopOf="@+id/degree_text"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>

