<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="weatherViewModel"
            type="com.app.mybase.views.weather.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.weather.WeatherActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weather_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/today_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/today"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/today_text"
                    tools:text="@string/_12_june_2023" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_time_text"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    tools:lottie_rawRes="@raw/sun" />

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animation_view"
                    tools:text="@string/mostly_cloudy" />

                <TextView
                    android:id="@+id/degree_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/_35ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status_text"
                    tools:text="@string/_00" />

                <TextView
                    android:id="@+id/degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/c"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/degree_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/degree_text"
                    app:layout_constraintTop_toBottomOf="@+id/status_text"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/min_temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="end"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toStartOf="@+id/temp_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/degree_text"
                    tools:ignore="RtlSymmetry"
                    tools:text="@string/min_29" />

                <TextView
                    android:id="@+id/max_temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="start"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/min_temp"
                    app:layout_constraintTop_toBottomOf="@+id/degree_text"
                    tools:ignore="RtlSymmetry"
                    tools:text="@string/max_29" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/temp_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/city_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/_16ssp"
                    app:drawableLeftCompat="@drawable/location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/min_temp"
                    tools:text="@string/karaikudi" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/details_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/gradient_bg_banner"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/city_text">

                    <LinearLayout
                        android:id="@+id/wind_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/humidity_layout"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/wind_img"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/wind" />

                        <TextView
                            android:id="@+id/wind_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15ssp"
                            tools:text="@string/_0_00" />

                        <TextView
                            android:id="@+id/wind_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_horizontal"
                            android:text="@string/wind"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/humidity_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/wind_layout"
                        app:layout_constraintEnd_toStartOf="@+id/sea_layout"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/wind_layout"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/humidity_img"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/humidity" />

                        <TextView
                            android:id="@+id/humidity_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15ssp"
                            tools:text="@string/_0_00" />

                        <TextView
                            android:id="@+id/humidity_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_horizontal"
                            android:text="@string/humidity"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sea_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/humidity_layout"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/sea_img"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/sea_level" />

                        <TextView
                            android:id="@+id/sea_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15ssp"
                            tools:text="@string/_0_00" />

                        <TextView
                            android:id="@+id/sea_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_horizontal"
                            android:text="@string/sea_level"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/rv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/forecast_overview"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_layout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forecast_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/_25sdp"
                    app:layout_constraintTop_toBottomOf="@+id/rv_title"
                    tools:itemCount="5"
                    tools:listitem="@layout/forecast_card_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_4sdp"
            android:text="@string/oops_please_enable_gps_connection"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/progressbar"
            app:visibility="@{weatherViewModel.showLoading.booleanValue ? View.VISIBLE : View.GONE}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>